@@ -1,3 +1,11 @@
+2016-07-19  Jakub Jelinek  <jakub@redhat.com>
+
+	Backported from mainline
+	2016-07-18  Jakub Jelinek  <jakub@redhat.com>
+
+	PR c++/71871
+	* typeck.c (build_x_conditional_expr): Revert the 2012-10-25 change.
+
 2016-07-07  Jakub Jelinek  <jakub@redhat.com>
 
 	Backported from mainline
